# smart-home-project

./: .gitignore  PROJECT_DOC.md  README.md  SETUP.md  app.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  requirements_orangepi.txt  start.bat
data/: face_embeddings.pkl  face_label_map.pkl  face_model.yml  smart_home.db
face-recognition/: .gitignore  README.md  config.py  main.py  pyproject.toml  test-recog.py
face-recognition/docs/: local-face-authorizer-design.md
face-recognition/docs/superpowers/plans/: 2026-07-06-lightweight-face-vector-cache.md
face-recognition/docs/superpowers/specs/: 2026-07-06-lightweight-face-vector-cache-design.md
face-recognition/ref/: course.md
face-recognition/scripts/: __init__.py  make_noisy_test_images.py
face-recognition/services/: face_authorizer.py
face-recognition/src/smart_home_face/: __init__.py  cli.py  config.py  face_authorizer.py
face-recognition/tests/: test_face_authorizer.py  test_make_noisy_test_images.py  test_package_imports.py
routes/: __init__.py  api.py  pages.py
scripts/: download_face_models.py
services/: __init__.py  camera_capture.py  device_manager.py  face_recognition_service.py  insightface_backend.py  insightface_recognition_service.py  object_detection.py  sensor_simulator.py
templates/: access_control.html  base.html  dashboard.html  data_analysis.html  device_control.html  object_detection.html  persons.html
tests/: test_allowed_file.py  test_download_face_models.py  test_face_recognition_insightface_service.py  test_face_registration.py  (+1 more)
(+7 files in other folders)
