[project]
name = "smart-home-face"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "insightface>=1.0.1",
    "onnxruntime>=1.27.0",
    "opencv-python>=5.0.0.93",
    "pyserial>=3.5",
    "uvicorn[standard]>=0.50.2",
]

[project.scripts]
smart-home-face-verify = "smart_home_face.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smart_home_face"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
